# california-housing-pipeline

./: .gitignore  Dockerfile  app.py  california_housing_pipeline.pkl  data_loader.py  model_pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
